# cumulus-api

./: .gitignore  .gitmodules  Makefile  README.md  apidoc.yaml  apidoc.yml  build_db_docs.sh  check_configs.sh  docker-compose.airflow.yml  docker-compose.minio.yml  docker-compose.swagger.yml  docker-compose.tests.yml  docker-compose.yml  download.drawio  elasticmq.conf  geoprocess-gendoc.sh  go.mod  go.sum  packager-gendoc.sh  pcap.sh  plugins.py  reload_db.sh  send_message.py  serverless.yml  test-gdalinfo.py  test_and_report.sh  tests.sh  zsrs.prj  zsrs2.prj
async_geoprocess/: Dockerfile  README.md  gendoc.sh  mkdocs.yml  requirements.txt  setup.cfg  sqs_handler.py  start_worker.py  worker.py
async_geoprocess/cumulus/cumulus/processors/: cbrfc-mpe.py  cbrfc_mpe.py  hrrr-total-precip.py  lmrfc-qpe-01h.py  lmrfc-qpf-06h.py  marfc-nbmt-01h.py  marfc-nbmt-03h.py  mbrfc-krf-fct-airtemp-01h.py  mbrfc-krf-qpe-01h.py  mbrfc-krf-qpf-06h.py  naefs-mean-06h.py  nbm-co-01h.py  nbm-co-airtemp.py  nbm-co-qpf.py  ncep-mrms-gaugecorr-qpe-01h.py  ncep-mrms-v12-MultiSensor-QPE-01H-Pass1.py  ncep-mrms-v12-MultiSensor-QPE-01H-Pass2.py  ncep-mrms-v12-msqpe01h-p1-alaska.py  ncep-mrms-v12-msqpe01h-p1-carib.py  ncep-mrms-v12-msqpe01h-p2-alaska.py  ncep-mrms-v12-multisensor-qpe-01h-pass1.py  ncep-mrms-v12-multisensor-qpe-01h-pass2.py  ncep-rtma-ru-anl.py  ncrfc-fmat-01h.py  ndfd-conus-airtemp.py  ndfd-conus-qpf-06h.py  ndfd-conus-qpf.py  ndfd-conus-temp-1to3.py  ndfd-conus-temp-4to7.py  ndgd-leia98-precip.py  ndgd-ltia98-airtemp.py  nohrsc-snodas-assimilated.py  nsidc-swe-depth.py  nsidc-ua-swe-sd-v1.py  prism-ppt-early.py  prism-tmax-early.py  prism-tmin-early.py  prism_ppt_early.py  serfc-qpe-01h.py  serfc-qpe-01hr.py  (+4 more)
async_geoprocess/cumulus/cumulus/wrfcolumbia/: core.py
async_geoprocess/cumulus/tests/: test_snodas.py
async_geoprocess/docs/: index.html  worker.html
async_geoprocess/docs/src/cumulus_geoproc/: __init__.html  configurations.html
async_geoprocess/geoprocess_worker/: __init__.py  config.py  helpers.py  incoming_file_to_cogs.py  p_incoming_file_to_cogs.py  p_snodas_interpolate.py  snodas_interpolate.py  worker.py
async_geoprocess/src/cumulus_geoproc/: __init__.py  configurations.py  process_snodas.py
async_geoprocess/src/cumulus_geoproc/geoprocess/: __init__.py  handler.py  incoming_file_to_cogs.py  snodas_interpolate.py  tasks.py
async_geoprocess/src/cumulus_geoproc/processors/: __init__.py  _template_processor.py  abrfc-qpe-01h.py  cbrfc-mpe.py  cnrfc-qpe-01h.py  cnrfc-qpe-06h.py  hrrr-total-precip.py  lmrfc-qpe-01h.py  lmrfc-qpf-06h.py  marfc-fmat-06h.py  marfc-nbmt-01h.py  marfc-nbmt-03h.py  marfc-rtmat-01h.py  mbrfc-krf-fct-airtemp-01h.py  mbrfc-krf-qpe-01h.py  mbrfc-krf-qpf-06h.py  naefs-mean-06h.py  nbm-co-01h.py  ncrfc-fmat-01h.py  (+29 more)
async_packager/: Dockerfile  Makefile  README.md  gendoc.sh  mkdocs.yml  packager.py  packager_orig.py  setup.cfg
async_packager/packager/: config.py  dss.py  packager.py  packager_update_functions.py  requirements.txt  tiffdss
async_packager/packager/writers/: dss7.py  tgz_cog.py
async_packager/src/cumulus_packager/: __init__.py  configurations.py
async_packager/tiffdss/src/: Makefile  make.sh  test.py  test.sh  test_data.py  test_grid_struct.py  test_open_dss.py  test_tiffdss.py  testdss7.py  testdss7.sh  testdss7a.py  tiffdss.c  tiffdss_orig.c  utils.c  utils.h
(+964 files in other folders)
