[metadata]
name = cumulus-geoproc
version = 0.1.0
author = USACE RSGIS
author_email = author@example.com
description = Implementation processing incoming grids to Cloud Optimized GeoTIFF (COG)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://docs.rsgis.dev
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pytz
    boto3
    numpy
    pyplugs
    netCDF4
    requests
    GDAL
    rasterstats
    psycopg2-binary
    rasterio
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cumulus =  data/*
