[metadata]
name = cumulus-packager
version = 0.1.0
author = USACE RSGIS
author_email = author@example.com
description = Packager Implementation
long_description = file: README.md, LICENSE
license = MIT
long_description_content_type = text/markdown
url = https://docs.rsgis.dev
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    httpx
    httpx[http2]
    boto3==1.21.29
    botocore==1.24.29
    numpy==1.22.3
    celery==5.2.3
    pyplugs==0.4.0
    netCDF4==1.5.8
    requests==2.27.1
    GDAL==3.4.3
    gdal-utils==3.4.1.0
    psycopg2-binary==2.9.3
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cumulus_packager =  bin/*
