[metadata]
name = cumulus-packager
version = 0.1.0
author = USACE RSGIS
author_email = author@example.com
description = Packager Implementation
long_description = file: README.md, LICENSE
license = MIT
long_description_content_type = text/markdown
url = https://usace.github.io/cumulus-api/
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    httpx
    httpx[http2]
    boto3
    botocore
    numpy
    celery
    pyplugs
    netCDF4
    requests
    gdal-utils
    psycopg2-binary
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cumulus_packager =  bin/*
